2015-06-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc.c:
	  Fix bug #2389.
	* src/SDCCglue.c,
	  src/SDCCmain.c,
	  src/SDCCutil.c,
	  src/SDCCutil.h:
	  Remove build date from version string to make reproducible builds easier.

2015-06-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* Small Device C Compiler 3.5.0 released
	* .version, doc/sdccman.lyx: changed sdcc version to 3.5.1

2015-06-20 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/scripts/gen_known_bugs.pl: fixed by Raphael Neider for changed
	  SourceForge pages

2015-06-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* .version,
	* doc/INSTALL.txt,
	* doc/sdccman.lyx: version 3.5.0

2015-06-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCmain.c (preProcess): reverted removal of SDCC macro
	* src/stm8/gen.c (genLeftShiftLiteral): hushed a compiler warning
	* support/regression/tests/gcc-torture-execute-960218-1.c,
	* support/regression/tests/gcc-torture-execute-20030913-1.c: renamed test()
	  to prevent double testing, renamed glob to prevent name conflict	
	* support/scripts/sdcc.nsi: removed dedication to Borut Razem

2015-06-09 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/scripts/repack_release.sh: changed mac osx snapshot source,
	  forced uploading to directories

2015-06-07 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Add section on the use of --allow-unsafe-reads on Z80-based systems.

2015-06-06 Maarten Brock <sourceforge.brock AT dse.nl>

	* .version,
	* doc/INSTALL.txt,
	* doc/sdccman.lyx: version 3.5.0 rc1
	* sdcc.spec: version 3.5.0
	* device/lib/pic14/libsdcc/idata.c: cosmetics
	* support/regression/tests/bug-2274.c: prevented double testing by rename
	* support/regression/tests/gcc-torture-execute-stdarg-5.c: no ASSERT(0)

2015-06-05 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx,
	  src/SDCCglobl.h,
	  src/SDCClospre.cc,
	  src/SDCCmain.c:
	  Use more generic name for option for unsafe reads.
